# tycho-execution

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  input.json  release.config.js
.github/workflows/: ci-test.yaml  evm-foundry-ci.yml  release.yaml  slither.yml  tests-and-lints-template.yaml
cache/: solidity-files-cache.json
config/: executor_addresses.json  protocol_specific_addresses.json  router_addresses.json  test_executor_addresses.json
examples/encoding-example/: README.md  main.rs
examples/quickstart/: Readme.md  main.rs
foundry/: README.md  foundry.toml  hardhat.config.js  package-lock.json  package.json  remappings.txt  slither.config.json
foundry/interfaces/: ICallback.sol  ICallbackVerifier.sol  ICurveRouter.sol  IExecutor.sol  ISwapExecutor.sol  IUniversalRouter.sol
foundry/lib/: Constants.sol  IWETH.sol  LibSwap.sol  Payments.sol  PaymentsImmutables.sol  Permit2Payments.sol
foundry/lib/bytes/: LibPrefixLengthEncodedByteArray.sol
foundry/lib/v3-updated/: CallbackValidationV2.sol  PoolAddressV2.sol
foundry/script/: Deploy.sol
foundry/scripts/: README.md  deploy-executors.js  deploy-router.js  executors.json  fund-wallet-tenderly-fork.js  roles.json  set-executors.js  set-roles.js
foundry/src/: CallbackVerificationDispatcher.sol  Dispatcher.sol  ExecutionDispatcher.sol  Swap.sol  SwapExecutionDispatcher.sol  TychoRouter.sol
foundry/src/executors/: BalancerV2Executor.sol  CurveExecutor.sol  EkuboExecutor.sol  ExecutorTransferMethods.sol  TokenTransfer.sol  UniswapV2Executor.sol  UniswapV3Executor.sol  UniswapV4Executor.sol  Uniswapv2SwapExecutor.sol
foundry/src/interfaces/: IExecutor.sol
foundry/src/lib/: LibPrefixLengthEncodedByteArray.sol
foundry/test/: CallbackVerificationDispatcher.t.sol  Constants.sol  CurveRouterGasTest.t.sol  Dispatcher.t.sol  ExecutionDispatcher.t.sol  GasTest.t.sol  LibPrefixLengthEncodedByteArray.t.sol  LibSwap.t.sol  Permit2TestHelper.sol  SwapExecutionDispatcher.t.sol  TestTemplate.sol  TychoRouter.t.sol  TychoRouterIntegration.t.sol  TychoRouterProtocolIntegration.t.sol  TychoRouterSequentialSwap.t.sol  TychoRouterSingleSwap.t.sol  TychoRouterSplitSwap.t.sol  TychoRouterTestSetup.sol
foundry/test/executors/: BalancerV2Executor.t.sol  CurveExecutor.t.sol  EkuboExecutor.t.sol  UniswapV2Executor.t.sol  UniswapV2SwapExecutor.t.sol  UniswapV3Executor.t.sol  UniswapV4Executor.t.sol  UniswapV4Utils.sol
foundry/test/mock/: MockERC20.sol  MockUniswapV2Pool.sol
src/: lib.rs
src/encoding/: approvals_manager.rs  constants.rs  errors.rs  mod.rs  models.rs  permit2.rs  router_encoder.rs  serde_primitives.rs  strategy_encoder.rs  strategy_selector.rs  swap_encoder.rs  tycho_encoder.rs  user_approvals_manager.rs  utils.rs
src/encoding/approvals/: approvals_manager.rs  interface.rs  mod.rs  permit2.rs
src/encoding/config/: executor_addresses.json
src/encoding/evm/: constants.rs  encoder_builder.rs  encoder_builders.rs  group_swaps.rs  mod.rs  models.rs  router_encoder.rs  strategy_encoders.rs  tycho_encoder.rs  (+2 more)
(+29 files in other folders)
